--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <nav class="hidden md:flex space-x-8 font-medium">
-      <a href="index.html" class="text-indigo-600">Home</a>
+      <a href="/Portfolio/index.html" class="text-indigo-600">Home</a>
       <a href="/about.html" class="hover:text-indigo-600">About</a>
       <a href="/portfolio.html" class="hover:text-indigo-600">Portfolio</a>
       <a href="/contact.html" class="hover:text-indigo-600">Contact</a>
@@ -240,5 +240,6 @@
 
 </body>
 </html>
+
 
 
