--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
     <nav class="hidden md:flex space-x-8 font-medium">
       <a href="/Portfolio/index.html" class="text-indigo-600">Home</a>
-      <a href="/about.html" class="hover:text-indigo-600">About</a>
-      <a href="/portfolio.html" class="hover:text-indigo-600">Portfolio</a>
-      <a href="/contact.html" class="hover:text-indigo-600">Contact</a>
+      <a href="/Portfolio/about.html" class="hover:text-indigo-600">About</a>
+      <a href="/Portfolio/portfolio.html" class="hover:text-indigo-600">Portfolio</a>
+      <a href="/Portfolio/contact.html" class="hover:text-indigo-600">Contact</a>
     </nav>
 
     <button id="menu-btn" class="md:hidden">
@@ -240,6 +240,7 @@
 
 </body>
 </html>
+
 
 
 
