--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
           HIRE ME
         </button> -->
 
-         <a href="/portfolio.html" target="_self"
+         <a href="/Portfolio/portfolio.html" target="_self"
             class="bg-indigo-600 text-white px-7 py-3 rounded-lg shadow hover:bg-indigo-700 transition">
             HIRE ME
             </a>
 
-       <a href="/img/ashu_resume.pdf" download
+       <a href="/Portfolio/ashu_resume.pdf" download
             class="inline-block border-2 border-indigo-600 text-indigo-600 px-7 py-3 rounded-lg
                     hover:bg-indigo-600 hover:text-white transition">
             GET CV
@@ -240,6 +240,7 @@
 
 </body>
 </html>
+
 
 
 
