--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
   <!-- Mobile Menu -->
   <div id="mobile-menu" class="hidden md:hidden bg-white shadow-md">
     <nav class="flex flex-col px-6 py-4 space-y-4">
-      <a href="/index.html" class="text-indigo-600">Home</a>
-      <a href="/about.html">About</a>
-      <a href="/portfolio.html">Portfolio</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/Portfolio/index.html" class="text-indigo-600">Home</a>
+      <a href="/Portfolio/about.html">About</a>
+      <a href="/Portfolio/portfolio.html">Portfolio</a>
+      <a href="/Portfolio/contact.html">Contact</a>
     </nav>
   </div>
 </header>
@@ -139,7 +139,7 @@
     <!-- Right Image -->
    <div class="flex justify-center">
   <div class="relative neon-border">
-    <img src="/my_img-removebg-preview.pn"
+    <img src="/Portfolio/my_img-removebg-preview.pn"
          alt="Developer Illustration"
          class="w-full max-w-md rounded-xl bg-white relative z-10">
   </div>
@@ -170,10 +170,10 @@
       <div>
         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600">
-          <li><a href="/index.html" class="hover:text-indigo-600">Home</a></li>
-          <li><a href="/about.html" class="hover:text-indigo-600">About</a></li>
-          <li><a href="/portfolio.html" class="hover:text-indigo-600">Portfolio</a></li>
-          <li><a href="/contact.html" class="hover:text-indigo-600">Contact</a></li>
+          <li><a href="/Portfolio/index.html" class="hover:text-indigo-600">Home</a></li>
+          <li><a href="/Portfolio/about.html" class="hover:text-indigo-600">About</a></li>
+          <li><a href="/Portfolio/portfolio.html" class="hover:text-indigo-600">Portfolio</a></li>
+          <li><a href="/Portfolio/contact.html" class="hover:text-indigo-600">Contact</a></li>
         </ul>
       </div>
 
@@ -240,6 +240,7 @@
 
 </body>
 </html>
+
 
 
 
