--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <!-- Right Image -->
    <div class="flex justify-center">
   <div class="relative neon-border">
-    <img src="/Portfolio/my_img-removebg-preview.pn"
+    <img src="/Portfolio/my_img-removebg-preview.png"
          alt="Developer Illustration"
          class="w-full max-w-md rounded-xl bg-white relative z-10">
   </div>
@@ -240,6 +240,7 @@
 
 </body>
 </html>
+
 
 
 
