--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,10 @@
 
     <!-- Desktop Menu -->
     <nav class="hidden md:flex space-x-8 font-medium text-gray-700">
-      <a href="/index.html" class="hover:text-indigo-600">Home</a>
-      <a href="/about.html" class="hover:text-indigo-600">About</a>
-      <a href="/portfolio.html" class="hover:text-indigo-600">Portfolio</a>
-      <a href="/contact.html" class="text-indigo-600 font-semibold">Contact</a>
+      <a href="/Portfolio/index.html" class="hover:text-indigo-600">Home</a>
+      <a href="/Portfolio/about.html" class="hover:text-indigo-600">About</a>
+      <a href="/Portfolio/portfolio.html" class="hover:text-indigo-600">Portfolio</a>
+      <a href="/Portfolio/contact.html" class="text-indigo-600 font-semibold">Contact</a>
     </nav>
 
     <!-- Mobile Button -->
@@ -39,10 +39,10 @@
   <!-- Mobile Menu -->
   <div id="mobile-menu" class="hidden md:hidden bg-white border-t">
     <nav class="flex flex-col px-6 py-4 space-y-4 text-gray-700">
-      <a href="/index.html" class="hover:text-indigo-600">Home</a>
-      <a href="/about.html" class="hover:text-indigo-600">About</a>
-      <a href="/portfolio.html" class="hover:text-indigo-600">Portfolio</a>
-      <a href="/contact.html" class="text-indigo-600 font-semibold">Contact</a>
+      <a href="/Portfolio/index.html" class="hover:text-indigo-600">Home</a>
+      <a href="/Portfolio/about.html" class="hover:text-indigo-600">About</a>
+      <a href="/Portfolio/portfolio.html" class="hover:text-indigo-600">Portfolio</a>
+      <a href="/Portfolio/contact.html" class="text-indigo-600 font-semibold">Contact</a>
     </nav>
   </div>
 </header>
@@ -121,10 +121,10 @@
       <div>
         <h3 class="font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600">
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/portfolio.html">Portfolio</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="/Portfolio/index.html">Home</a></li>
+          <li><a href="/Portfolio/about.html">About</a></li>
+          <li><a href="/Portfolio/portfolio.html">Portfolio</a></li>
+          <li><a href="/Portfolio/contact.html">Contact</a></li>
         </ul>
       </div>
 
@@ -187,3 +187,4 @@
 
 </body>
 </html>
+
