--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,10 @@
     </div>
 
     <nav class="hidden md:flex space-x-8 font-medium">
-      <a href="/index.html" class="text-indigo-600">Home</a>
-      <a href="/about.html" class="hover:text-indigo-600">About</a>
-      <a href="/portfolio.html" class="hover:text-indigo-600">Portfolio</a>
-      <a href="/contact.html" class="hover:text-indigo-600">Contact</a>
+      <a href="/Portfolio/index.html" class="text-indigo-600">Home</a>
+      <a href="/Portfolio/about.html" class="hover:text-indigo-600">About</a>
+      <a href="/Portfolio/portfolio.html" class="hover:text-indigo-600">Portfolio</a>
+      <a href="/Portfolio/contact.html" class="hover:text-indigo-600">Contact</a>
     </nav>
 
     <button id="menu-btn" class="md:hidden">
@@ -38,10 +38,10 @@
   <!-- Mobile Menu -->
   <div id="mobile-menu" class="hidden md:hidden bg-white shadow-md">
     <nav class="flex flex-col px-6 py-4 space-y-4">
-      <a href="/index.html" class="text-indigo-600">Home</a>
-      <a href="/about.html">About</a>
-      <a href="/portfolio.html">Portfolio</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/Portfolio/index.html" class="text-indigo-600">Home</a>
+      <a href="/Portfolio/about.html">About</a>
+      <a href="/Portfolio/portfolio.html">Portfolio</a>
+      <a href="/Portfolio/contact.html">Contact</a>
     </nav>
   </div>
 </header>
@@ -55,7 +55,7 @@
     <a href="https://visitor-system.infinityfreeapp.com/index.php" target="_blank"
        class="group relative overflow-hidden rounded-lg">
 
-      <img src="/img/image.png" alt=""
+      <img src="/Portfolio/image.png" alt=""
            class="w-full h-56 object-cover group-hover:scale-110 transition duration-300">
 
       <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100
@@ -69,7 +69,7 @@
     <a href="https://er-ashutosh.github.io/AI-Fitness-Advisor/" target="_blank"
        class="group relative overflow-hidden rounded-lg">
 
-      <img src="/img/image copy.png" alt=""
+      <img src="/Portfolio/image copy.png" alt=""
            class="w-full h-56 object-cover group-hover:scale-110 transition duration-300">
 
       <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100
@@ -83,7 +83,7 @@
     <a href="https://student-document-request.netlify.app/" target="_blank"
        class="group relative overflow-hidden rounded-lg">
 
-      <img src="/img/Screenshot 2026-01-17 152610.png" alt=""
+      <img src="/Portfolio/Screenshot 2026-01-17 152610.png" alt=""
            class="w-full h-56 object-cover group-hover:scale-110 transition duration-300">
 
       <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100
@@ -97,7 +97,7 @@
     <a href="https://rajacvruproject.netlify.app/" target="_blank"
        class="group relative overflow-hidden rounded-lg">
 
-      <img src="/img/WhatsApp Image 2026-01-17 at 15.25.48.jpeg" alt=""
+      <img src="/Portfolio/WhatsApp Image 2026-01-17 at 15.25.48.jpeg" alt=""
            class="w-full h-56 object-cover group-hover:scale-110 transition duration-300">
 
       <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100
@@ -111,7 +111,7 @@
     <a href="https://er-ashutosh.github.io/To-do-List/" target="_blank"
        class="group relative overflow-hidden rounded-lg">
 
-      <img src="/img/Screenshot 2026-01-17 155523.png" alt=""
+      <img src="/Portfolio/Screenshot 2026-01-17 155523.png" alt=""
            class="w-full h-56 object-cover group-hover:scale-110 transition duration-300">
 
       <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100
@@ -125,7 +125,7 @@
     <a href="https://er-ashutosh.github.io/To-do-List/" target="_blank"
        class="group relative overflow-hidden rounded-lg">
 
-      <img src="/img/new_task_white.png" alt=""
+      <img src="/Portfolio/new_task_white.png" alt=""
            class="w-full h-56 object-cover group-hover:scale-110 transition duration-300">
 
       <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100
@@ -168,10 +168,10 @@
       <div>
         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600">
-          <li><a href="/index.html" class="hover:text-indigo-600">Home</a></li>
-          <li><a href="/about.html" class="hover:text-indigo-600">About</a></li>
-          <li><a href="/portfolio.html" class="hover:text-indigo-600">Portfolio</a></li>
-          <li><a href="/contact.html" class="hover:text-indigo-600">Contact</a></li>
+          <li><a href="/Portfolio/index.html" class="hover:text-indigo-600">Home</a></li>
+          <li><a href="/Portfolio/about.html" class="hover:text-indigo-600">About</a></li>
+          <li><a href="/Portfolio/portfolio.html" class="hover:text-indigo-600">Portfolio</a></li>
+          <li><a href="/Portfolio/contact.html" class="hover:text-indigo-600">Contact</a></li>
         </ul>
       </div>
 
@@ -236,3 +236,4 @@
 </script>
 </body>
 </html>
+
