--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <nav class="hidden md:flex space-x-8 font-medium">
-      <a href="/Portfolio/index.html" class="text-indigo-600">Home</a>
+      <a href="#" class="text-indigo-600">Home</a>
       <a href="/Portfolio/about.html" class="hover:text-indigo-600">About</a>
       <a href="/Portfolio/portfolio.html" class="hover:text-indigo-600">Portfolio</a>
       <a href="/Portfolio/contact.html" class="hover:text-indigo-600">Contact</a>
@@ -240,6 +240,7 @@
 
 </body>
 </html>
+
 
 
 
