--- a/portfolio.html
+++ b/portfolio.html
@@ -122,15 +122,15 @@
     </a>
 
     <!-- Project Card 6 -->
-    <a href="https://er-ashutosh.github.io/To-do-List/" target="_blank"
+    <a href="https://er-ashutosh.github.io/Game-Rock-paper-scissor/" target="_blank"
        class="group relative overflow-hidden rounded-lg">
 
-      <img src="/Portfolio/new_task_white.png" alt=""
+      <img src="/Portfolio/r-p-s.png" alt=""
            class="w-full h-56 object-cover group-hover:scale-110 transition duration-300">
 
       <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100
                   flex flex-col justify-center items-center transition">
-        <h3 class="text-lg font-semibold">Add Task on to-do list</h3>
+        <h3 class="text-lg font-semibold">Rock-Paper-Scissor Game</h3>
         <p class="text-sm mt-2">View on GitHub</p>
       </div>
     </a>
@@ -236,4 +236,5 @@
 </script>
 </body>
 </html>
+
 
